# app-mvp

./: .gitignore  README.md
ai-core/: API_README.md  README.md  control_panel.py  main.py  pyproject.toml  run_api.py  run_pipeline.py  select_disc.py  test_api_full.py  view_analysis.py
ai-core/configs/: compare_models.yaml  cutie_analysis.yaml  full_analysis.yaml  ingest_test.yaml  lifting_test.yaml  physical_params.yaml  pose_segmentation_test.yaml  pose_test.yaml  segmentation_test.yaml  single_disc_tracking.yaml  tracking_comparison.yaml  tracking_test.yaml  visualization_test.yaml
ai-core/src/analysis/: detection_filter.py  disc_calibrator.py  disc_fusion_tracker.py  geometry_utils.py  lifting_optimizer.py  merger.py  metrics_calculator.py  model_tracker.py  track_refiner.py  tracking_utils.py  trajectory_cleaner.py
ai-core/src/analysis/tracking/: byte_tracker.py
ai-core/src/api/: __init__.py  main.py  models.py  storage.py  tasks.py
ai-core/src/api/routes/: __init__.py  bench.py  videos.py
ai-core/src/domain/: __init__.py  entities.py  label_mapper.py  ports.py
ai-core/src/input_layer/: metadata_scanner.py  video_loader.py
ai-core/src/perception/: cutie_tracker.py  yolo_detector.py  yolo_pose.py  yolo_segmentor.py
ai-core/src/pipeline/: config.py  runner.py
ai-core/src/tools/: __init__.py  disc_selector.py  selection_loader.py
ai-core/src/visualization/: data_loader.py  interactive_viewer.py  metrics_visualizer.py  multi_model_renderer.py  video_renderer.py
ai-core/templates/: dashboard.html
docs/: API_CHANGELOG.md  BENCHMARK_API.md  MOBILE_APP_SPEC.md  README_FULL.md  api_guide.md  architecture.md  lifting_heuristics.md  pipeline_guide.md  pipeline_logic.md  (+2 more)
(+4 files in other folders)
