[project]
name = "ai-core"
version = "0.2.0"
description = "AI Video Analysis Core - Weightlifting tracking and metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filterpy>=1.4.5",
    "ipykernel>=7.1.0",
    "lapx>=0.9.3",
    "matplotlib>=3.8.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.0",
    "pydantic>=2.12.5",
    "PyQt5>=5.15.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "streamlit>=1.52.2",
    "ultralytics>=8.3.243",
    # FastAPI dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
]

[project.scripts]
ai-core-api = "api.main:run_server"
